<resources>
    <string name="app_name">Conductor Taxi JJ</string>
    <string name="app_name_cap">Conductor Taxi JJ</string>
    <string name="googlekey">AIzaSyDJND85prbbI9SCQKdslcWqx4zsQ0-Odhg</string>
    <string name="googlekey_other">AIzaSyA_MxuFoVyvgIlMQ4KPRb3kFsmHrdfHjXA</string>
    <string name="FACEBOOK_APP_ID">1941193059506768</string>
    <string name="facebook_app_id">1941193059506768</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">51c17c549405876879cb48033cfe0c03</string>
    <string name="default_notification_channel_id">Channel_ID</string>
    <string name="allowpermission">Allow Permission</string>
    <string name="nessper">This permission is necessary to use Conductor Taxi JJ App.</string>
    <string name="allow">Allow</string>
    <string name="closeapp">Close App</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="wevarify">We will verify your mobile number</string>
    <string name="wantcont">Do you want to continue?</string>
    <string name="login_sm">Login</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="logface">LOGIN WITH FACEBOOK</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="pickuplocation">Pick Up Location</string>
    <string name="droplocation">Drop off Location</string>
    <string name="sign_sm">Signup</string>
    <string name="bookletter">BOOK LATER</string>
    <string name="booknow">BOOK NOW</string>
    <string name="myprofile">Profile</string>
    <string name="user_pin_code">User Pin :</string>
    <string name="mywallet">Wallet</string>
    <string name="money">Money</string>
    <string name="cashless"><![CDATA[Cashless, Hassle-free rides & more]]></string>
    <string name="currentbal">Your current balance</string>
    <string name="addhitechmoney">Add JJ Taxi Dollar</string>
    <string name="entermoney">Enter money between $10 - $100</string>
    <string name="billpaywith">Bill pay with</string>
    <string name="ridehistory">History</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="setdrop">Enter Drop off Location</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="pleaseenteremailid">Enter your email id</string>
    <string name="email">email id</string>
    <string name="submit">Submit</string>
    <string name="createaccoub">Create an account</string>
    <string name="driverinfo">Driver Information</string>
    <string name="username">Username</string>
    <string name="driverlicens">Drivers License</string>
    <string name="carmodel">Car Make and Model</string>
    <string name="yearmanu">Year of Manufacture</string>
    <string name="selcarcol">Select Car Color</string>
    <string name="carregis">License Plate Number</string>
    <string name="insurance">Insurance</string>
    <string name="register">REGISTER</string>
    <string name="driverside">Driver Side</string>
    <string name="goonline">Go Online</string>
    <string name="change">Change</string>
    <string name="addcar">Add Car</string>
    <string name="pleasewait">please wait...</string>
    <string name="gooffline">Go offline</string>
    <string name="selectcar">Select your car</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="decline">DECLINE</string>
    <string name="accept">ACCEPT</string>
    <string name="pickuppesanger">Pickup Passenger</string>
    <string name="arrived">ARRIVED</string>
    <string name="viewpessangerdetail">View Passenger Detail</string>
    <string name="canceltripmenu">Cancel Trip</string>
    <string name="selectlang">Select Languages</string>
    <string name="done">Done</string>
    <string name="invalidcredential">Invalid Credentials</string>
    <string name="entermobile">Enter Your Mobile Number</string>
    <string name="enterpass">Enter Password</string>
    <string name="selectcarmodel">Select car make and model</string>
    <string name="selmanyyear">Maufacture Year</string>
    <string name="selectcarcol">Select Car Color</string>
    <string name="plsentpass">Please Enter Password</string>
    <string name="plsmobilestr">Please enter mobile number</string>
    <string name="plsentusername">Please Enter Username</string>
    <string name="plsselyear">Please select manufacture year</string>
    <string name="entercarmodel">Please enter car model name</string>
    <string name="plsenterregi">Please enter licence plate number</string>
    <string name="pleasuplodains">Please upload insurance image</string>
    <string name="plsupldri">Please upload driver license image</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="pesdetail">Passenger detail</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="carimage">Select car image</string>
    <string name="carispect">Registration</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="canceluser">This ride has been canceled by the user</string>
    <string name="areusure">Are you sure?</string>
    <string name="tocancel">To cancel this request</string>
    <string name="slideendtrip">End Trip</string>
    <string name="yes">Yes</string>
    <string name="toendtrip">To end the trip</string>
    <string name="tostarttrip">To start the trip</string>
    <string name="warning">Warning!!</string>
    <string name="notonpoint">You are not at the dropoff point. Please confirm to finish the ride</string>
    <string name="slidebegintrip">Start Trip</string>
    <string name="tripsummary">Trip Summary</string>
    <string name="paymenttype">Payment Type: Cash</string>
    <string name="paytype">Payment Type: </string>
    <string name="promocodedis">Promo code</string>
    <string name="pleasecollect">Please collect money from rider</string>
    <string name="detail">Detail</string>
    <string name="entercomment">Enter Comment</string>
    <string name="usernotpaymentyet">User has not paid yet</string>
    <string name="payment">Payment</string>
    <string name="recivecash">You have received the payment by cash from user</string>
    <string name="givebywallet">User paid by wallet.</string>
    <string name="givebycreditcard">User paid by credit card</string>
    <string name="toarrived">Arrived at pickup point.</string>
    <string name="lastearning">Last Trip</string>
    <string name="netearning">Net Earnings</string>
    <string name="todayearning">Today\'s Earnings</string>
    <string name="estimatednet">Estimated Net</string>
    <string name="tips">Tips</string>
    <string name="todaytips">Today Tips</string>
    <string name="trip">Trip</string>
    <string name="all">All</string>
    <string name="yourtranjection">Your Transactions</string>
    <string name="withdra">Withdraw Money</string>
    <string name="history">History</string>
    <string name="driver">Driver</string>
    <string name="help">Help</string>
    <string name="personal">Personal</string>
    <string name="cashout">Cash Out</string>
    <string name="redeem">Redeem</string>
    <string name="bankname">Bank Routing Number</string>
    <string name="accountno">Account Number</string>
    <string name="ammount">Amount</string>
    <string name="fullname">Full Name</string>
    <string name="postcode">Postcode</string>
    <string name="transferout">Transfer Out</string>
    <string name="ridedetail">Ride Detail</string>
    <string name="bookingno">Booking Id</string>
    <string name="notactive">Waiting for your account to be verified.</string>
    <string name="favuser">Favorite users</string>
    <string name="enteramount">Please enter amount.</string>
    <string name="performance">Performance</string>
    <string name="trasaction">Transactions</string>
    <string name="alreadylog">You are already logged in from a different device. Would you like to log out of the other device?</string>
    <string name="appupdateneed">New version available. Please update before continuing</string>
    <string name="remindlater">Remind Later</string>
    <string name="updatewallet">Your wallet amount is to low for cash rides,please maintain a balance of 20$ for getting cash rides.</string>
    <string name="later">Later</string>
    <string name="dropadd">New drop point is added by rider.</string>
    <string name="servererror">Server Error,Please Try again..</string>
    <string name="checkpassreslink">Please check reset password mail is send to your email id</string>
    <string name="emailnotext">This Email id is not exist</string>
    <string name="discountapp">Discount applied :</string>
    <string name="colectmoneyfromrider">Please collect money from rider</string>
    <string name="amountaddwallet">Amount will be added to your wallet</string>
    <string name="selloc">Please Select Location</string>
    <string name="selservicetype">Please select service type</string>
    <string name="inroute">Enroute</string>
    <string name="picpassenger">Pickup Passenger</string>
    <string name="ontheway">On The Way</string>
    <string name="startnavigation">Start Navigation</string>
    <string name="googlemap">Google Map</string>
    <string name="waze">By Waze</string>
    <string name="addinwalletforcardride">Add amount in your wallet for card payment type ride.</string>
    <string name="paidforride">the amount you paid for your card type ride.</string>
    <string name="addedtoyourwallet">You add amount in your wallet.</string>
    <string name="addinwalletforwallettyperide">Amount added in wallet for wallet type ride.</string>
    <string name="amountdeductforwalletride">Amount is deduct for wallet ride.</string>
    <string name="deductfromwalletforcashride">Amount is deduct from wallet for cash ride.</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="todaytotalride">Today Total Ride :</string>
    <string name="todaytotalearning">Today Earning :</string>
    <string name="todayacceptride">Today Accepted Rides :</string>
    <string name="todaycanceledride">Today Canceled Rides :</string>
    <string name="weektotalride">Week Total Ride :</string>
    <string name="weektotalearning">Week Total Earning :</string>
    <string name="weekacceptride">Week Accepted Rides :</string>
    <string name="weekcanceledride">Week Canceled Rides :</string>
    <string name="monthtotalride">Month Total Ride :</string>
    <string name="monthtotalearning">Month Total Earning :</string>
    <string name="monthacceptride">Month Accepted Rides :</string>
    <string name="monthcanceledride">Month Canceled Rides :</string>
    <string name="expresspay">Express Pay</string>
    <string name="expresspaycharge">$0.50 has been charged when you select express payment.</string>
    <string name="withdrawamountisgreater">Your wallet amount is less to your withdraw amount.</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string-array name="language">
        <item>@string/english</item>
        <item>@string/spanish</item>
    </string-array>
    <string name="collectpayment">Collect Payment</string>
    <string name="pleasrateuser">Please Rate User</string>
    <string name="distance">Distance</string>
    <string name="bookingcharge">Booking Charge</string>
    <string name="yourtrip">Your trip</string>
    <string name="enteruserpin">Enter User Pin</string>
</resources>