<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="ltr"

    >

    <RelativeLayout
        android:id="@+id/mainlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/toobarcolor"

            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/CustomTheme" />



            <RelativeLayout
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/exit_app_but"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_back" />
            </RelativeLayout>

            <TextView
                android:layout_toRightOf="@+id/exit_app_but"
                android:id="@+id/titletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="@dimen/medium" />



        <TextView
            android:id="@+id/save_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/medium" />

    </RelativeLayout>

    <LinearLayout
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainlay"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/langradiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/englishrb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textSize="@dimen/large"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/arabicid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spanish"
                android:textSize="@dimen/large"
                android:textColor="@color/black" />


        </RadioGroup>
    </LinearLayout>


</RelativeLayout>
